--- a/Angular/index.html
+++ b/Angular/index.html
@@ -56,6 +56,9 @@
               <select class="selectClass selectpicker pull-left" id="chartType" >
                   <option value="pie">Pie</option>
                   <option value="bar">Bar</option>
+                  <option value="radar">Radar</option>
+                  <option value="line">Line</option>
+                  <option value="polarArea">Polar Area</option>
                 </select>
               <button  id="chartButton" class="btn btn-primary pull-left" ng-click="pieChart()">Display Chart</button>
               <button id="employeeButton" ng-show="isDeleted" class="btn btn-primary pull-right" ng-click="manageDeleteTable()">View Deleted Employees</button>
